Porting to 26.1
---

- AE2 compatibility
- Fix hang on save world
- Fix drop contents
- Fix block entity renderers
- Fix compiler not accepting items